--- a/src/index.css
+++ b/src/index.css
@@ -14,3 +14,8 @@ code {
   font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
     monospace;
 }
+
+:root{
+  --red:"D2222D";
+  --green:"238823"
+}
