--- a/src/components/Nav.css
+++ b/src/components/Nav.css
@@ -6,7 +6,7 @@
 }
 
 
-nav{
+/* nav{
     height:12vh;
     background-color:var(--darkBlue);
     display: flex;
@@ -34,4 +34,140 @@ nav{
     list-style-type: none;
     border:none;
     color:var(--lightBlue);
-}
+} */
+
+/* New nav  */
+
+nav {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    min-height: 12vh;
+    padding-left:80px;
+    padding-right: 80px;
+    background-color: var(--darkBlue);
+  }
+  
+  .logo {
+    height: 40px;
+    width: 40px;
+    z-index: 4;
+    padding-top:2px;
+  }
+
+  .logo img{
+    height:40px;
+    width:40px;
+  }
+  .nav-links {
+    display: flex;
+    justify-content: space-around;
+    align-items: center;
+    width: 40%;
+    z-index: 2;
+    padding-top: 2px;
+  }
+  
+  .nav-links li {
+    list-style: none;
+    color:var(--blue);
+  }
+  .nav-links li:hover {
+    list-style: none;
+  }
+
+  .links{
+    color:var(--blue);
+    z-index: 10000;
+  }
+
+  
+  .container-fluid{
+    display: flex;
+    width:100%;
+    justify-content: space-between;
+  }
+  .switch {
+    text-decoration: none;
+    letter-spacing: 1px;
+    font-size: 14px;
+    color: var(--lightBlue);
+    position: relative;
+  }
+  
+  .switch:after {
+    content: "";
+    position: absolute;
+    background-color: var(--lightBlue);
+    height: 1px;
+    width: 0;
+    left: 0;
+    bottom: -2px;
+    transition: 0.3s;
+  }
+  
+  .switch:hover {
+    color: var(--lightBlue);
+    transition: 0.3s;
+  }
+  .switch:hover:after {
+    width: 100%;
+    color: var(--lightBlue);
+  }
+  
+  .burger {
+    display: none;
+    cursor: pointer;
+  }
+  
+  .burger div {
+    width: 25px;
+    height: 2px;
+    background-color: var(--lightBlue);
+    margin: 5px;
+  }
+  
+  @media screen and (max-width: 992px) {
+    .nav-links {
+      width: 6%;
+    }
+    
+  }
+  
+  @media screen and (max-width: 768px) {
+    nav{
+        padding-left:40px;
+        padding-right: 40px;
+        }
+
+    .nav-links {
+      position: absolute;
+      right: 0px;
+      height: 88vh;
+      top: 12vh;
+      background-color: var(--darkBlue);
+      display: flex;
+      flex-direction: column;
+      align-items: center;
+      width: 100%;
+      transform: translateX(150%);
+      transition: transform 0.5s ease-in;
+      overflow: hidden;
+    }
+    .nav-links li {
+
+      margin-right: 7%;
+    }
+    .burger {
+      display: block;
+      padding-top:15px;
+    }
+  }
+  
+  .nav-active {
+    transform: translate(0%);
+  }
+ 
+  .link .subscribe{
+    padding-top:5px;
+  }
